# arktech-blog

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
arktech_blog/: asgi.py  settings.py  urls.py  wsgi.py
common/views/: __init__.py  recaptcha.py
posts/: urls.py
posts/migrations/: 0001_initial.py
posts/models/: __init__.py  post.py
posts/serializers/: __init__.py  post_serializer.py
posts/tests/: conftest.py  test_post_model.py  test_post_serializer.py  test_post_viewset.py
posts/views/: __init__.py  post_viewset.py
users/: apps.py  permissions.py  urls.py
users/migrations/: 0001_initial.py
users/models/: user.py
users/serializers/: user_serializer.py
users/tests/: conftest.py  test_permissions.py  test_user_model.py  test_user_serializers.py  test_user_viewset.py
users/views/: __init__.py  user_viewset.py
